<resources>
    <string name="app_name">CapitalSocial</string>
    <string name="login_email_pass">o ingresa tu correo y contraseña</string>
    <string name="login_button_access">Ingresar</string>
    <string name="login_button_register">Regístrate</string>
    <string name="login_text_user">Usuario</string>
    <string name="login_text_pass">Contraseña</string>
    <string name="login_text_forgotten_password">¿Has olvidado tu contraseña?</string>
    <string name="floating_button_facebook">Facebook</string>
    <string name="floating_button_twitter">Twitter</string>
    <string name="floating_button_whats">WhatsApp</string>
    <string name="floating_button_mail">E-mail</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eu commodo sapien. Vestibulum sit amet metus eu nisi sagittis finibus. Mauris quis lectus nisl. Ut porttitor, ante quis malesuada venenatis, tellus urna condimentum magna, vitae rhoncus nisl quam vel massa. Sed efficitur pharetra nisl, ut consequat est posuere at. Suspendisse egestas convallis augue, eu sollicitudin ipsum maximus ut. Nunc at dolor at libero blandit consectetur. Duis et rutrum enim. Praesent ut nisi sagittis, sodales ligula vitae, laoreet ligula. Duis a dui nisi.</string>
    <string name="facebook_app_id">113829272570300</string>
</resources>
